--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>-- cAIrrier --</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/6.3.3/firebase-app.js"></script>
@@ -18,5 +18,6 @@
     <link rel="stylesheet" href="style/index.css">
   </head>
   <body>
+    
   </body>
 </html>
