--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,17 @@
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
 
+    <!-- Stylesheet for index.html -->
     <link rel="stylesheet" href="style/index.css">
   </head>
   <body>
-    
+    <header></header>
+    <section id="titlePage" class="page"></section>
+    <section id="visionPage" class="page"></section>
+    <section id="offerPage" class="page">
+      <details class="drop-down-features"></details>
+    </section>
+    <section id="signPage" class="page"></section>
+    <footer></footer>
   </body>
 </html>
