--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,17 @@
   </head>
   <body>
     <header></header>
+
     <section id="titlePage" class="page"></section>
+
     <section id="visionPage" class="page"></section>
+
     <section id="offerPage" class="page">
-      <details class="drop-down-features"></details>
+      <div class="drop-down-features"></div>
     </section>
+
     <section id="signPage" class="page"></section>
+    
     <footer></footer>
   </body>
 </html>
