--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,11 @@
     <link rel="stylesheet" href="style/index.css">
   </head>
   <body>
-    <header></header>
+    <header>
+      <img src="" alt="Failed to load our beautiful Logo">
+
+      <h1>c<strong>AI</strong>re Technologies</h1>
+    </header>
 
     <section id="titlePage" class="page"></section>
 
@@ -30,7 +34,7 @@
     </section>
 
     <section id="signPage" class="page"></section>
-    
+
     <footer></footer>
   </body>
 </html>
