--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
       <img src="" alt="Failed to load our beautiful Logo">
       <h1>c<strong>AI</strong>re Technologies</h1>
 
-      
+      <a class="sign-up-btn" href="">Sign Up Now</a>
+      <a href="">Login</a>
     </header>
 
     <section id="titlePage" class="page"></section>
