--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,12 @@
   <script defer src="js/materialize.js"></script>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!--jquery for materialize framework-->
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -48,16 +54,22 @@
 
   <!--navbar-->
 
-
-
-
-
-
   <!--parallax-->
   <div class="parallax-container">
-    <div class="parallax"><img src="images/parallax1.jpg"></div>
+    <div class="parallax"><img src="https://uk.imageservice.sky.com/pcms/2d4f2ee8-1274-11e9-ab01-ffda494979e6/16_9/1280?output-quality=80"></div>
   </div>
+  <!--parallax-->
 
+
+  <h1>2</h1>
+  <h1>3</h1>
+  <h1>4</h1>
+  <h1>fsd</h1>
+  <h1>dswe</h1>
+  <h1>weq</h1>
+  <h1>sSADAS</h1>
+  <h1>yrdf</h1>
+  <h1>ppoop</h1>
 
   <script src="./js/index.js"></script>
 </body>
