--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,11 @@
   </head>
   <body>
     <header>
-      <img src="" alt="Failed to load our beautiful Logo">
+      <img src="images/cAIrrierTrans.png" alt="Failed to load our beautiful Logo">
       <h1>c<strong>AI</strong>re Technologies</h1>
 
-      <a class="sign-up-btn" href="">Sign Up Now</a>
       <a href="">Login</a>
+      <a class="sign-up-btn" href="">Sign Up Now</a>
     </header>
 
     <section id="titlePage" class="page"></section>
