--- a/public/index.html
+++ b/public/index.html
@@ -53,11 +53,11 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
 
   <nav>
     <div class="nav-wrapper">
-      <img src="images/cAIrrierTrans.png" class="brand-logo">
+      <img src="images/cAIrrierTrans.png" class="brand-logo" style="height: 100%;">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="sass.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li><a href="collapsible.html">Login</a></li>
       </ul>
     </div>
   </nav>
