--- a/public/index.html
+++ b/public/index.html
@@ -55,9 +55,9 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
     <div class="nav-wrapper">
       <img src="images/cAIrrierTrans.png" class="brand-logo" style="height: 100%;">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">Login</a></li>
+        <li style="float: left;"><a href="index.html">cAIre technologies</a></li>
+        <li><a href="#">Sign Up Now</a></li>
+        <li><a href="#">Login</a></li>
       </ul>
     </div>
   </nav>
