--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   <nav>
     <div class="nav-wrapper">
       <img src="images/cAIrrierTrans.png" class="brand-logo" style="height: 100%;">
+      <a href="index.html" style="height: 100%; font-size: 3rem; padding-left: 8vw; font-weight: bolder;">cAIre technologies</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li style="float: left;"><a href="index.html">cAIre technologies</a></li>
         <li><a href="#">Sign Up Now</a></li>
         <li><a href="#">Login</a></li>
       </ul>
