--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
 
   <!-- Stylesheet for materialize -->
   <link rel="stylesheet" href="style/materialize.css">
+  <!-- Stylesheet for index.html -->
+  <link rel="stylesheet" href="style/index.css">
   <!--- Script for materialize-->
   <script defer src="js/materialize.js"></script>
   <!--Let browser know website is optimized for mobile-->
