--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   </div>
 
   <div id="offering">
-    <!--Garret-->
+    <!--Garett-->
   </div>
 
 
@@ -102,7 +102,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   </div>
 
   <div id="footer">
-    <!--Garret-->
+    <!--Garett-->
   </div>
 
 
