--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
 
 
   <div id="navbar">
-    <!--Garret-->
+    <!--Garett-->
       <nav>
           <div class="nav-wrapper">
             <img src="images/cAIrrierTrans.png" class="brand-logo" style="height: 100%;">
