--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,9 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
 
   <div id="vision">
     <!--Jeraldy-->
+    <div class="c_container">
+        <h1>our vision</h1>
+    </div>
     
   </div>
 
