--- a/public/index.html
+++ b/public/index.html
@@ -83,11 +83,14 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
       <!--parallax-->
   </div>
 
-  <div id="vision">
+  <div class="center-align" id="vision">
     <!--Jeraldy-->
     <div class="c_container">
         <h1>our vision</h1>
+        <h2>this is the best programming music ever</h2>
     </div>
+
+
     
   </div>
 
