--- a/public/index.html
+++ b/public/index.html
@@ -86,8 +86,14 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   <div class="center-align" id="vision">
     <!--Jeraldy-->
     <div class="c_container">
+      <div id="vision_title">
         <h1>our vision</h1>
-        <h2>this is the best programming music ever</h2>
+      </div>
+      <div id="box_containier">
+        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent lorem est, pulvinar quis justo eu, bibendum faucibus lectus. Donec eget lorem vel diam mollis tincidunt. Suspendisse elementum 
+          orci vel viverra tempor. Morbi elit tortor, posuere id leo a, porta ultrices dui. Sed nisl sapien, accumsan in nunc non, mattis ultrices nulla. 
+          Aliquam erat volutpat. In ultricies nec nisl non dignissim. Praesent quis dolor orci.</h6>
+      </div>
     </div>
 
 
