--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,8 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   <div id="offering">
     <!--Garett-->
     <div class="row">
-      <div class="col s6"></div>
+      <div class="col s6">6 wide</div>
+      <div class="col s6">6 wide</div>
     </div>
   </div>
 
