--- a/public/index.html
+++ b/public/index.html
@@ -103,8 +103,23 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   <div id="offering">
     <!--Garett-->
     <div class="row">
-      <div class="col s6">6 wide</div>
-      <div class="col s6">6 wide</div>
+      <div class="col s6">
+        <h1>- What We Offer -</h1>
+        <div class="container">
+          <p>cAIrrier is a semi-automated two way messaging 
+            platform designed for health care workers that implements
+            deep learning to optimize communication with patients.
+            We believe a messaging platform should be trustworthy,
+            intuitive, confidential, and easily customizable to meet 
+            the specific needs of your practice. </p>
+            <h5>Because we cAIr</h2>
+        </div>
+      </div>
+      <div class="col s6">
+        <div class="valign-wrapper">
+          <img src="#" alt="Picture">
+        </div>
+      </div>
     </div>
   </div>
 
