--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
       </div>
       <div class="col s6">
         <div class="valign-wrapper">
-          <img src="#" alt="Picture">
+          <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" alt="Picture" style="height: 100%;">
         </div>
       </div>
     </div>
