--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   <div id="offering">
     <!--Garett-->
     <div class="row">
-      <div class="col s6">
+      <div class="col s8">
         <h1>- What We Offer -</h1>
         <div class="container">
           <p>cAIrrier is a semi-automated two way messaging 
@@ -115,9 +115,9 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
             <h5>Because we cAIr</h2>
         </div>
       </div>
-      <div class="col s6">
+      <div class="col s4">
         <div class="valign-wrapper">
-          <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" alt="Picture" style="height: 100%;">
+          <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" alt="Picture" class="responsive-img">
         </div>
       </div>
     </div>
