--- a/public/index.html
+++ b/public/index.html
@@ -121,12 +121,23 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
         </div>
       </div>
     </div>
+    <a class="waves-effect waves-light btn" id="learn-more-btn">learn more...</a>
   </div>
 
 
   <div id="featureList">
-    <!--Jeraldy-->
-
+    <!--Garett-->
+    <div class="row">
+      <div class="col s2">
+        <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" alt="feature" class="responsive-img">
+      </div>
+      <div class="col s3"></div>
+      <div class="col s2"></div>
+      <div class="col s3"></div>
+      <div class="col s2">
+        <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" alt="feature" class="responsive-img">
+      </div>
+    </div>
   </div>
 
 
@@ -136,6 +147,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
 
   <div id="footer">
     <!--Garett-->
+
   </div>
 
 
