featur list layout

--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,43 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   <div id="featureList">
     <!--Jeraldy-->
 
+    <div class="info_feature">
+        <div class="row">
+            <div class="col s3">
+              <!--Left Pic-->
+              <img class="featurePic" src="http://www.quickmeme.com/img/71/71a66b0d4881562d1e445763fd440deef589aae4c0bf52058b0a251879967b0c.jpg">
+
+            </div>
+            <div class="col s2">
+              <!--Feature List Part 1-->
+            <ul>
+              <li>memes</li>
+              <li>robots</li>
+              <li>AI killing terminator</li>
+            </ul>
+            </div>
+            <div class="col s2">
+              <!--Feature List Part 2-->
+              <ul>
+                <li>memes</li>
+                <li>robots</li>
+                <li>AI killing terminator</li>
+              </ul>
+            </div>
+            <div class="col s2">
+              <!--Feature List Part 3-->
+              <ul>
+              <li>memes</li>
+              <li>robots</li>
+              <li>AI killing terminator</li>
+            </ul>
+            </div>
+            <div class="col s3">
+              <!--Right Pic-->
+              <img class="featurePic" src="http://www.quickmeme.com/img/71/71a66b0d4881562d1e445763fd440deef589aae4c0bf52058b0a251879967b0c.jpg">
+            </div>
+          </div>
+    </div>
   </div>
 
 
