--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
     <!--Garett-->
       <nav>
         <div class="nav-wrapper">
-          <img src="images/cAIrrierTrans.png" class="brand-logo" style="height: 100%;">
-          <a class="title" href="index.html">c<strong>AI</strong>r  technologies</a>
+            <img src="images/cAIrrierTrans.png" class="brand-logo" style="height: 100%;">
+            <img src="images/NavTrans.png" class="brand-logo center" style="height: 100%;">
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#">Sign Up Now</a></li>
             <li><a href="#">Login</a></li>
@@ -128,15 +128,11 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   <div id="featureList">
     <!--Garett-->
     <div class="row">
-      <div class="col s2">
-        <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" alt="feature" class="responsive-img">
+      <div class="col s4">
+
       </div>
-      <div class="col s3"></div>
-      <div class="col s2"></div>
-      <div class="col s3"></div>
-      <div class="col s2">
-        <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" alt="feature" class="responsive-img">
-      </div>
+      <div class="col s4"></div>
+      <div class="col s4"></div>
     </div>
   </div>
 
