--- a/public/index.html
+++ b/public/index.html
@@ -143,6 +143,14 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
 
   <div id="signUpNOW">
     <!--Jeraldy-->
+    <div class="signMeUp">
+        <h5>Join Us Now</h5>
+      </div>
+    <div class="signMeUp">
+      <a class="waves-effect waves-light btn-large"><i class="material-icons right">people</i>Sign Up Now</a>
+    </div>
+    </div>
+
   </div>
 
   <div id="footer">
