--- a/public/index.html
+++ b/public/index.html
@@ -85,9 +85,9 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
 
   <div class="center-align" id="vision">
     <!--Jeraldy-->
-    <div class="c_container">
+    <div class="c_container" style="padding: 3rem 0;">
       <div id="vision_title">
-        <h1>our vision</h1>
+        <h1>Our Vision</h1>
       </div>
       <div id="box_containier">
         <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent lorem est, pulvinar quis justo eu, bibendum faucibus lectus. Donec eget lorem vel diam mollis tincidunt. Suspendisse elementum 
@@ -95,18 +95,15 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
           Aliquam erat volutpat. In ultricies nec nisl non dignissim. Praesent quis dolor orci.</h6>
       </div>
     </div>
-
-
-    
   </div>
 
   <div id="offering">
     <!--Garett-->
     <div class="row">
-      <div class="col s8">
+      <div class="col s7" style="margin-top: 1rem;">
         <h1>- What We Offer -</h1>
-        <div class="container">
-          <p>cAIrrier is a semi-automated two way messaging 
+        <div class="container offering">
+          <p style="font-size: 1.3rem">cAIrrier is a semi-automated two way messaging 
             platform designed for health care workers that implements
             deep learning to optimize communication with patients.
             We believe a messaging platform should be trustworthy,
@@ -115,13 +112,13 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
             <h5>Because we cAIr</h2>
         </div>
       </div>
-      <div class="col s4">
+      <div class="col s5">
         <div class="valign-wrapper">
-          <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" alt="Picture" class="responsive-img">
+          <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" alt="Picture" class="responsive-img left">
         </div>
       </div>
     </div>
-    <a class="waves-effect waves-light btn" id="learn-more-btn">learn more...</a>
+    <a class="waves-effect waves-light btn" id="learn-more-btn" style="margin-top: 3rem;">learn more...</a>
   </div>
 
 
