--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   <div id="signUpNOW">
     <!--Jeraldy-->
     <div class="signMeUp">
-        <h5>Join Us Now</h5>
+        <h5>-- Join Us Now --</h5>
       </div>
     <div class="signMeUp">
       <a class="waves-effect waves-light btn-large"><i class="material-icons right">people</i>Sign Up Now</a>
@@ -149,7 +149,31 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
 
   <div id="footer">
     <!--Garett-->
-
+    <footer class="page-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">Footer Content</h5>
+              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+              <h5 class="white-text">Links</h5>
+              <ul>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <div class="container">
+          © 2019 CAIR TECHNOLOGIES
+          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+          </div>
+        </div>
+      </footer>
   </div>
 
 
