--- a/public/adminPages/dashboard.html
+++ b/public/adminPages/dashboard.html
@@ -129,7 +129,7 @@
                 <div class="col-md-7">
                     <div class=" animated fadeInRight card darken-1 topCard">
                         <div class="card-content black-text">
-                            <span class="card-title">Comapany Donations</span>
+                            <span class="card-title">Comapany Stuff</span>
                             <div id="compBar" class="ct-chart .ct-major-seventh "></div>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
                 <div class="col-md-5">
                     <div class=" animated fadeInUp card darken-1 ">
                         <div class="card-content black-text midCard">
-                            <span class="card-title">Total Donation</span>
+                            <span class="card-title">Total Memes</span>
                         </div>
                     </div>
                 </div>
@@ -153,8 +153,6 @@
                     <div class=" animated fadeInUp card darken-1 ">
                         <div class="card-content black-text midCard">
                             <span class="card-title">Upcoming Events</span>
-                            <p>Spring Fair</p>
-                            <p>Saftey Fair</p>
                             <p>Voluneet Fair</p>
                         </div>
                     </div>
