--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="style/index.css">
   <!--- Script for materialize-->
   <script defer src="js/materialize.js"></script>
+  <script defer src="js/index.js"></script>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -115,6 +116,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
       </div>
       <div class="col m5">
         <div class="valign-wrapper">
+          
           <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" alt="Picture" class="center responsive-img">
         </div>
       </div>
@@ -127,7 +129,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
     <!--Garett-->
     <div class="row">
       <div class="col s4">
-
+        <h1>oof</h1>
       </div>
       <div class="col s4"></div>
       <div class="col s4"></div>
@@ -135,17 +137,15 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
   </div>
 
 
-  <div id="signUpNOW">
-    <!--Jeraldy-->
-    <div class="signMeUp">
-        <h5>-- Join Us Now --</h5>
+    <div id="signUpNOW">
+      <!--Jeraldy-->
+      <div class="h_align">
+          <h5>Join Us Now</h5>
+        </div>
+        <div class="h_align">
+        <a class="waves-effect waves-light btn-large"><i class="material-icons right">people</i>Sign Up Now</a>
       </div>
-    <div class="signMeUp">
-      <a class="waves-effect waves-light btn-large"><i class="material-icons right">people</i>Sign Up Now</a>
-    </div>
-    </div>
-
-  </div>
+      </div>
 
   <div id="footer">
     <!--Garett-->
