--- a/public/index.html
+++ b/public/index.html
@@ -108,12 +108,10 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
             <!--   Icon Section   -->
             <div class="row" style="padding: 5rem 0rem">
                 <div class="col s12 m6">
-                    <div class="icon-block">
+                    <div class="icon-block center">
                         <div  class="animated fadeInUp" id="introComponent">
-                            <p class="slogan animated slideInLeft">because</p>
-                            <p class="slogan animated slideInRight ">we c<span style="color: #b2d8d8">ai</span>r</p>
-                            <p class="animated fadeInUp " id="desc">We believe a healthcare messaging platform should be trustworthy, intuitive, confidential, and easily customizable to meet
-                              the specific needs of your patients with deep learning.</p>
+                            <p class="Light animated slideInLeft">- What We Offer -</p>
+                            <p class="animated fadeInUp " id="desc">cAirrier lifts the workload off healthcare professionals,workers and makes personal messaging with patients easy through intuitive features and beautiful user interfacing. Deep Learning and merge field technology allows for innovative and personal provider-patient communications that are sent from a local phone number directly to a patient’s existing messaging platform. HIPPA compliance and customizable features ensure that our platform is right for your healthcare organization. Reach further using cAIrrier.</p>
                               <a class="waves-effect waves-light btn-small">learn more</a>
                         </div>
                     </div>
@@ -121,7 +119,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
     
                 <div class="col s12 m6">
                     <div class="icon-block">
-                        <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" style="width: 100%; border-radius: 4rem;" class="responsive-img">
+                        <img src="images/pongsawat-pasom-GqNqFMh3OoU-unsplash.jpg" style="width: 100%; border-radius: 4rem;" class="responsive-img animated slideInRight">
                     </div>
                 </div>
             </div>
