--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
             <div class="container">
                 <img src="images/HomeTrans.png" style="width: 100%; position: relative; top: 10vh;">
                 <div class="row center" style="position: relative; top: 10vh;">
-                    <a href="#products" id="download-button"
+                    <a href="#products" id="download-button2"
                        class="btn-large waves-effect waves-light teal lighten-1">Sign Up Now</a>
                 </div>
                 <br><br>
@@ -266,7 +266,6 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
-    <script src="js/index.js"></script>
     
     </body>
 
