--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,6 @@
   crossorigin="anonymous"></script>
 
 
-  
 
 
 
@@ -52,6 +51,8 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
 <!-- end Mixpanel -->
 
 
+
+  <script defer src="./js/tracking.js"></script>
 </head>
 
 <body>
