--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
                         <div  class="animated fadeInUp" id="introComponent"> <br>
                             <h4 class="Light animated slideInLeft">- What We Offer -</h4>
                             <p class="animated fadeInUp " id="desc">cAirrier lifts the workload off healthcare professionals, and makes personal messaging with patients easy through intuitive features and beautiful user interfacing. Deep Learning and merge field technology allows for innovative and personal provider-patient communications that are sent from a local phone number directly to a patient’s existing messaging platform. Our platform determines and delivers provider messages that are catered to an individual patient, both through timed messages and suggested replies to frequently asked questions. HIPPA compliance and customizable features ensure that our platform is right for your healthcare organization. Reach further using cAIrrier.</p>
-                        </div> <br>
+                        </div>
                     </div>
                   </div>
 
@@ -125,18 +125,18 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
                   </div>
                 </div>
             </div>
-          </div>
           <div class="row center">
             <div class="col s12">
-              <button class="btn-small waves-effect waves-light teal lighten-1" style="color: black">click for more...</button>
+              <button id="dropdown-btn" class="btn-small waves-effect waves-light teal lighten-1" style="color: black">click for more...</button> <br>
             </div>
-          </div>
+          </div> <br>
         </div>
+      </div>
     </div>
 
     <div class="white" style="height: 2px; width: 100vw;"></div>
 
-    <div class="teal" id="dropdown-feature" style="display: none;">
+    <div class="teal" id="dropdown-feature" style="display: none; transition: 1s;">
       <div class="container">
         <div class="section">
           <div class="row">
@@ -263,6 +263,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
+    <script src="js/index.js"></script>
     
     </body>
 
