fixed garrets button problem

--- a/public/index.html
+++ b/public/index.html
@@ -255,7 +255,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
         </div>
         <div class="footer-copyright">
             <div class="container">
-                Made by <a class="brown-text text-lighten-3" href="http://mogdan.yxz">cAIr technologies</a>
+                Made by <a class="brown-text text-lighten-3" href="http://oof.yxz">cAIr technologies</a>
             </div>
         </div>
     </footer>
