--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,15 @@
 <html style="scroll-behavior: smooth;">
 
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MPSQ6P4');</script>
+    <!-- End Google Tag Manager -->
+
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>-- CAIRRIER --</title>
@@ -52,10 +61,16 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
 
 
 
+
   <script defer src="./js/tracking.js"></script>
+  <script defer src="./js/organization_sub.js"></script>
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MPSQ6P4"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <nav class="transparentBG" role="navigation" style="position: sticky; top: 0; z-index: 5;">
         <div class="nav-wrapper container">
             <img src="images/cAIrrierTrans.png" alt="Navigation Icon" style="width: 56px">
