--- a/public/index.html
+++ b/public/index.html
@@ -60,16 +60,10 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
         <div class="nav-wrapper container">
           <img src="images/cAIrrierTrans.png" alt="Navigation Icon" style="width: 56px">
           <a id="logo-container" href="/" class="brand-logo left hide-on-med-and-down"><img src="images/NavTrans.png" alt="cAIre technologies" style="height: 56px;"></a>
-          <ul class="right hide-on-med-and-down">
+          <ul class="right">
               <li><a href="https://google.com">Sign Up Now</a></li>
               <li><a href="https://google.com">Login</a></li>
           </ul>
-  
-          <ul id="nav-mobile" class="sidenav">
-            <li><a href="https://google.com">Sign Up Now</a></li>
-            <li><a href="https://google.com">Login</a></li>
-          </ul>
-          <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
     
