--- a/public/index.html
+++ b/public/index.html
@@ -76,8 +76,8 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
           <img src="images/cAIrrierTrans.png" alt="Navigation Icon" style="width: 56px">
           <a id="logo-container" href="/" class="brand-logo left hide-on-med-and-down"><img src="images/NavTrans.png" alt="cAIre technologies" style="height: 56px;"></a>
           <ul class="right">
-              <li><a href="https://google.com">Sign Up Now</a></li>
-              <li><a href="https://google.com">Login</a></li>
+              <li><a href="signin.html">Sign Up Now</a></li>
+              <li><a href="signin.html">Login</a></li>
           </ul>
         </div>
     </nav>
@@ -90,7 +90,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
           <div class="container">
             <img src="images/HomeTrans.png" style="width: 100%; position: relative; top: 10vh;">
             <div class="row center" style="position: relative; top: 10vh;">
-              <a href="#products" id="download-button2"
+              <a href="signin.html" id="download-button2"
                   class="btn-large waves-effect waves-light teal lighten-1">Sign Up Now</a>
             </div>
             <br><br>
@@ -193,7 +193,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
                 <li>$300 start up</li>
                 <li>Up to 5 accounts</li>
               </ul> <br>
-              <a href="#products" id="download-button"
+              <a href="signin.html" id="download-button"
                           class="btn-large waves-effect waves-light teal lighten-1">Sign Up Now</a>
             </div>
           </div>
@@ -209,7 +209,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
                 <li>$500 start up</li>
                 <li>Up to 20 accounts</li>
               </ul> <br>
-              <a href="#products" id="download-button"
+              <a href="signin.html˝" id="download-button"
                           class="btn-large waves-effect waves-light teal lighten-1">Sign Up Now</a>
             </div>
           </div>
@@ -225,7 +225,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
                 <li>$700 start up</li>
                 <li>Up to 50+ accounts</li>
               </ul> <br>
-              <a href="#products" id="download-button"
+              <a href="signin.html˝" id="download-button"
                           class="btn-large waves-effect waves-light teal lighten-1">Sign Up Now</a>
             </div>
           </div>
