--- a/public/index.html
+++ b/public/index.html
@@ -174,12 +174,12 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
       <div class="row">
         <div class="col s12 center">
           <h1 class="Light">FOR HEALTH CARE WORKERS</h1>
-          <a id="business-button" class="btn-small waves-effect waves-light white lighten-1" style="color: black;">learn more</a>
+          <a href="signin.html" id="business-button" class="btn-small waves-effect waves-light white lighten-1" style="color: black;">Sign Up</a>
         </div>
       </div>
     </div>
 
-    <div class="container" id="business" style="display: none">
+    <!-- <div class="container" id="business" style="display: none">
       <br>
       <div class="row">
         <div class="col s12 m4">
@@ -209,7 +209,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
                 <li>$500 start up</li>
                 <li>Up to 20 accounts</li>
               </ul> <br>
-              <a href="signin.html˝" id="download-button"
+              <a href="signin.html" id="download-button"
                           class="btn-large waves-effect waves-light teal lighten-1">Sign Up Now</a>
             </div>
           </div>
@@ -225,7 +225,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
                 <li>$700 start up</li>
                 <li>Up to 50+ accounts</li>
               </ul> <br>
-              <a href="signin.html˝" id="download-button"
+              <a href="signin.html" id="download-button"
                           class="btn-large waves-effect waves-light teal lighten-1">Sign Up Now</a>
             </div>
           </div>
@@ -233,7 +233,7 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
       </div>
     </div>
 
-    <div class="white" style="height: 2px; width: 100vw;"></div>
+    <div class="white" style="height: 2px; width: 100vw;"></div> -->
     
     <footer class="page-footer" style="background-color: rgb(82, 189, 180);">
         <div class="container">
