--- a/public/signin.html
+++ b/public/signin.html
@@ -1,5 +1,14 @@
 <head>
     <link rel="stylesheet" href="style/signin.css">
+    <link rel="stylesheet" href="style/materialize.css">
+    <link rel="stylesheet" href="style/fullpage.css">
+    <link rel="stylesheet" href="style/animate.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat%7CSource+Sans+Pro&display=swap" rel="stylesheet">
+    <script src="js/signin.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
 </head>
 
 <div class="container">
@@ -7,38 +16,21 @@
         <form class="col s12" id="reg-form">
             <div class="row">
                 <div class="input-field col s6">
-                    <input id="first_name" type="text" class="validate" required>
-                    <label for="first_name">First Name</label>
+                    <input id="first_name" type="text" class="validate" placeholder="First Name" required>
+                    <!-- <label for="first_name">First Name</label> -->
                 </div>
                 <div class="input-field col s6">
-                    <input id="last_name" type="text" class="validate" required>
-                    <label for="last_name">Last Name</label>
+                    <input id="last_name" type="text" class="validate" placeholder="Last Name" required>
+                    <!-- <label for="last_name">Last Name</label> -->
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="email" type="email" class="validate" required>
-                    <label for="email">Email</label>
+                    <input id="email" type="email" class="validate" placeholder="Email" required>
+                    <!-- <label for="email">Email</label> -->
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s12">
-                    <input id="password" type="password" class="validate" minlength="6" required>
-                    <label for="password">Password</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s6">
-                    <div class="gender-male">
-                        <input class="with-gap" name="gender" type="radio" id="male" required />
-                        <label for="male">Male</label>
-                    </div>
-                    <div class="gender-female">
-                        <input class="with-gap" name="gender" type="radio" id="female" required />
-                        <label for="female">Female</label>
-                    </div>
-                </div>
-        
                 <div class="input-field col s6">
                     <button class="btn btn-large btn-register waves-effect waves-light" type="submit" name="action">Register
                     <i class="material-icons right">done</i>
@@ -47,8 +39,4 @@
             </div>
         </form>
     </div>
-    <a title="Login" class="ngl btn-floating btn-large waves-effect waves-light red"><i class="material-icons">input</i></a>
 </div>
-
-<script src="js/signin.js"></script>
-    
