--- a/public/index.html
+++ b/public/index.html
@@ -278,6 +278,27 @@ mixpanel.init("f465d97fa2b1eea6bc34765d80a9a106");</script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/index.js"></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.3.3/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#config-web-app -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyCPNrhmG6_miSeUeDPzmWgXALDkXml1jog",
+        authDomain: "cairrier.firebaseapp.com",
+        databaseURL: "https://cairrier.firebaseio.com",
+        projectId: "cairrier",
+        storageBucket: "cairrier.appspot.com",
+        messagingSenderId: "74921308478",
+        appId: "1:74921308478:web:1324887fe9df32b9"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
     
     </body>
 
