--- a/public/signin.html
+++ b/public/signin.html
@@ -5,13 +5,9 @@
     <link rel="stylesheet" href="style/animate.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat%7CSource+Sans+Pro&display=swap" rel="stylesheet">
-    <script src="js/signin.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous"></script>
 </head>
 
-<div class="container">
+<div class="container" id="form">
     <div class="row">
         <form class="col s12" id="reg-form">
             <div class="row">
@@ -31,8 +27,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s6">
-                    <button class="btn btn-large btn-register waves-effect waves-light" type="submit" name="action">Register
+                <div class=" col s6">
+                    <button id="submit" class="btn btn-large waves-effect waves-light">Register
                     <i class="material-icons right">done</i>
                     </button>
                 </div>
@@ -40,3 +36,15 @@
         </form>
     </div>
 </div>
+
+<div class="container" id="confirm" style="display: none;">
+    <div class="row">
+        <div class="col s12">
+            <h4 class="Light center">Thanks for signing up with</h4>
+            <h5 class="Light center">Our platform is coming soon</h5>
+            <h6 class="Light center">but we'll contact yah :)</h6>
+        </div>
+    </div>
+</div>
+
+<script src="js/signin.js"></script>
