--- a/public/signin.html
+++ b/public/signin.html
@@ -1,20 +1,18 @@
 <head>
     <link rel="stylesheet" href="style/signin.css">
     <link rel="stylesheet" href="style/materialize.css">
-    <link rel="stylesheet" href="style/fullpage.css">
-    <link rel="stylesheet" href="style/animate.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat%7CSource+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 
-<div class="container" id="form">
+<div class="container">
     <div class="row">
         <form class="col s12" id="reg-form">
             <div class="row">
-                <div class="input-field col s6">
-                    <input id="first_name" type="text" class="validate" placeholder="First Name" required>
-                    <!-- <label for="first_name">First Name</label> -->
-                </div>
+            <div class="input-field col s6">
+                <input id="first_name" type="text" class="validate" placeholder="First Name" required>
+                <!-- <label for="first_name">First Name</label> -->
+            </div>
                 <div class="input-field col s6">
                     <input id="last_name" type="text" class="validate" placeholder="Last Name" required>
                     <!-- <label for="last_name">Last Name</label> -->
@@ -27,15 +25,17 @@
                 </div>
             </div>
             <div class="row">
-                <div class=" col s6">
-                    <button id="submit" class="btn btn-large waves-effect waves-light">Register
-                    <i class="material-icons right">done</i>
-                    </button>
-                </div>
+
+            <div class="input-field col s6">
+                <button id="submit" class="btn btn-large  waves-effect waves-light" type="submit" name="action">Register
+                <i class="material-icons right">done</i>
+                </button>
+            </div>
             </div>
         </form>
+        </div>
     </div>
-</div>
+        
 
 <div class="container" id="confirm" style="display: none;">
     <div class="row">
