--- a/public/signin.html
+++ b/public/signin.html
@@ -7,12 +7,12 @@
 
 <div class="container">
     <div class="row">
-        <form class="col s12" id="reg-form">
+        <form class="col s12">
             <div class="row">
-            <div class="input-field col s6">
-                <input id="first_name" type="text" class="validate" placeholder="First Name" required>
-                <!-- <label for="first_name">First Name</label> -->
-            </div>
+                <div class="input-field col s6">
+                    <input id="first_name" type="text" class="validate" placeholder="First Name" required>
+                    <!-- <label for="first_name">First Name</label> -->
+                </div>
                 <div class="input-field col s6">
                     <input id="last_name" type="text" class="validate" placeholder="Last Name" required>
                     <!-- <label for="last_name">Last Name</label> -->
@@ -25,16 +25,15 @@
                 </div>
             </div>
             <div class="row">
-
-            <div class="input-field col s6">
-                <button id="submit" class="btn btn-large  waves-effect waves-light" type="submit" name="action">Register
-                <i class="material-icons right">done</i>
-                </button>
-            </div>
+                <div class="input-field col s6">
+                    <button id="submit" class="btn btn-large waves-effect waves-light" type="submit" name="action">Register
+                    <i class="material-icons right">done</i>
+                    </button>
+                </div>
             </div>
         </form>
-        </div>
     </div>
+</div>
         
 
 <div class="container" id="confirm" style="display: none;">
@@ -48,3 +47,4 @@
 </div>
 
 <script defer src="./js/tracking2.js"></script>
+<script defer src="js/signin.js"></script>
