--- a/public/signin.html
+++ b/public/signin.html
@@ -108,6 +108,11 @@
             </div>
             <div class="row">
                 <div class="input-field col s12">
+                    <input id="organization" type="text" class="validate" placeholder="Organization" required>
+                    <!-- <label for="email">Email</label> -->
+                </div>
+            <div class="row">
+                <div class="input-field col s12">
                     <input id="email" type="email" class="validate" placeholder="Email" required>
                     <!-- <label for="email">Email</label> -->
                 </div>
@@ -119,6 +124,9 @@
                 </button>
             </div>
             </div>
+
+
+            
         </form>
     </div>
 </div>
