--- a/public/index.html
+++ b/public/index.html
@@ -186,11 +186,11 @@
 
 
 
-  <div class="teal valign-wrapper" style="height: 75vh; color: white;">
+  <div class="teal valign-wrapper" style="color: white;">
     <div class="container valign-wrapper" style="text-align: center;">
       <div class="row" style="font-weight: bolder">
         <h1>WHAT IS CARRIER</h1>
-        <p class="Light">cAIrrier is a semi-automated two way messaging platform designed for health care workers. Our
+        <p class="Light" style="font-size: 1.2rem">cAIrrier is a semi-automated two way messaging platform designed for health care workers. Our
           platform implements deep learning to optimize communication with patients. We believe a messaging platform
           should be trustworthy, intuitive, confidential, and easily customizable to meet the specific needs of your
           practice.
@@ -236,35 +236,40 @@
 
   <div class="white" style="height: 2px; width: 100vw;"></div>
 
-  <div style="background-color: rgb(82, 189, 180);">
+  <div style="background-color: rgb(82, 189, 180); font-size: 1.2rem;">
     <div class="container">
       <div class="section">
         <div class="row">
           <div class="col s12 m4">
             <div class="card icon-block" style="padding: 1rem; border-radius: 4rem;">
               <h2 class="center"><i class="material-icons">face</i></h2>
-              <h5 class="center">BIG FEATURE</h5>
-              <p class="Light" style="text-align: center">Feature Feature Feature Feature Feature Feature Feature
-                Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature
-                Feature Feature </p>
+              <h5 class="center">Personal</h5>
+              <ul class="center">
+                <li>Merge Field</li>
+                <li>Long code</li>
+              </ul>
             </div>
           </div>
           <div class="col s12 m4">
             <div class="card icon-block" style="padding: 1rem; border-radius: 4rem;">
               <h2 class="center"><i class="material-icons">face</i></h2>
-              <h5 class="center">BIG FEATURE</h5>
-              <p class="Light" style="text-align: center">Feature Feature Feature Feature Feature Feature Feature
-                Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature
-                Feature Feature </p>
+              <h5 class="center">Easier</h5>
+              <ul class="center">
+                <li>Semi-Automated</li>
+                <li>Banked Replies</li>
+                <li>Flag Messaging</li>
+              </ul>
             </div>
           </div>
           <div class="col s12 m4">
             <div class="card icon-block" style="padding: 1rem; border-radius: 4rem;">
               <h2 class="center"><i class="material-icons">face</i></h2>
-              <h5 class="center">BIG FEATURE</h5>
-              <p class="Light" style="text-align: center">Feature Feature Feature Feature Feature Feature Feature
-                Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature Feature
-                Feature Feature </p>
+              <h5 class="center">AI</h5>
+              <ul class="center">
+                <li>Deeply Trained</li>
+                <li>100% Accuracy</li>
+                <li></li>
+              </ul>
             </div>
           </div>
         </div>
