--- a/public/index.html
+++ b/public/index.html
@@ -252,7 +252,7 @@
           </div>
           <div class="col s12 m4">
             <div class="card icon-block" style="padding: 1rem; border-radius: 4rem;">
-              <h2 class="center"><i class="material-icons">face</i></h2>
+              <h2 class="center"><i class="material-icons">accessibility</i></h2>
               <h5 class="center">Easier</h5>
               <ul class="center">
                 <li>Semi-Automated</li>
@@ -263,7 +263,7 @@
           </div>
           <div class="col s12 m4">
             <div class="card icon-block" style="padding: 1rem; border-radius: 4rem;">
-              <h2 class="center"><i class="material-icons">face</i></h2>
+              <h2 class="center"><i class="material-icons">device_hub</i></h2>
               <h5 class="center">AI</h5>
               <ul class="center">
                 <li>Deeply Trained</li>
