--- a/public/index.html
+++ b/public/index.html
@@ -158,9 +158,9 @@
   <!-- End Google Tag Manager (noscript) -->
   <nav class="transparentBG" role="navigation" style="position: sticky; top: 0; z-index: 5;">
     <div class="nav-wrapper container">
-      <img src="images/cAIrrierTrans.png" alt="Navigation Icon" style="width: 56px">
-      <a id="logo-container" href="/" class="brand-logo left hide-on-med-and-down"><img src="images/NavTrans.png"
-          alt="cAIre technologies" style="height: 56px;"></a>
+      <img src="images/cAIrrierTrans.png" alt="Navigation Icon" style="height: inherit">
+      <a id="logo-container" href="/" class="brand-logo left hide-on-med-and-down" style="height: inherit"><img src="images/NavTrans.png"
+          alt="cAIre technologies" style="height: inherit"></a>
       <ul class="right">
         <li id="topSignUP"><a href="signin.html">Sign Up Now</a></li>
         <li id="logInUP"><a href="signin.html">Login</a></li>
