--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,7 @@
       <div class="container">
         <img src="images/HomeTrans.png" style="width: 100%; position: relative; top: 10vh;">
         <div class="row center" style="position: relative; top: 10vh;">
-          <a href="signin.html" id="download-button2" class="btn-large waves-effect waves-light teal lighten-1">Sign Up
+          <a href="signin.html" id="download-button2" class="btn-large waves-effect waves-light lighten-1">Sign Up
             Now</a>
         </div>
         <br><br>
@@ -349,7 +349,7 @@
       <div class="row">
         <div class="col l5 s6">
           <h4>Contact us</h4>
-          <h6>carrier@gmail.com</h6>
+          <h6>cairrier@gmail.com</h6>
         </div>
         <div class="col l2 hide-on-med-and-down">
           <img src="images/cAIrrierTrans.png" style="width: 100%; margin: 1rem;">
