--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
   <!-- End Google Tag Manager (noscript) -->
   <nav class="transparentBG" role="navigation" style="position: sticky; top: 0; z-index: 5;">
     <div class="nav-wrapper container">
-      <img src="images/cAIrrierTrans.png" alt="Navigation Icon" style="height: inherit">
+      <img src="images/cAIrrierLogoTrans.png" alt="Navigation Icon" style="height: inherit">
       <a id="logo-container" href="/" class="brand-logo left hide-on-med-and-down" style="height: inherit"><img src="images/NavTrans.png"
           alt="cAIre technologies" style="height: inherit"></a>
       <ul class="right">
