--- a/public/signin.html
+++ b/public/signin.html
@@ -92,57 +92,70 @@
 </head>
 
 <!-- end Mixpanel -->
-
 <div class="container" id="form">
-    <div class="row">
-        <form class="col s12">
-            <div class="row">
-                <div class="input-field col s6">
-                    <input id="first_name" type="text" class="validate" placeholder="First Name" required>
-                    <!-- <label for="first_name">First Name</label> -->
-                </div>
-                <div class="input-field col s6">
-                    <input id="last_name" type="text" class="validate" placeholder="Last Name" required>
-                    <!-- <label for="last_name">Last Name</label> -->
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="organization" type="text" class="validate" placeholder="Organization" required>
-                    <!-- <label for="email">Email</label> -->
-                </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="email" type="email" class="validate" placeholder="Email" required>
-                    <!-- <label for="email">Email</label> -->
-                </div>
-            </div>
-            <div class="row">
-            <div class="input-field col s6">
-                <button id="submit" class="btn btn-large  waves-effect waves-light" type="submit" name="action">Register
-                <i class="material-icons right">done</i>
-                </button>
-            </div>
-            </div>
-
-
-            
-        </form>
+    <div id="header">
+        <h1>Let's get started.</h1>
     </div>
-</div>
-        
 
-<div class="container" id="confirm" style="display: none;">
-    <div class="row">
-        <div class="col s12">
-            <h4 class="Light center">Thanks for signing up with</h4>
-            <h5 class="Light center">Our platform is coming soon</h5>
-            <h6 class="Light center">but we'll contact yah :)</h6>
+
+
+
+
+    <div id="contactContainer">
+        <div class="row">
+            <form class="col s12">
+                <div class="row">
+
+                    <div class="input-field col s1">
+                            <i class="small material-icons">person</i>
+                    </div>
+                    <div class="input-field col s4">
+                      <input id="first_name" type="text" class="validate" placeholder="Full Name" required>
+                        <!-- <label for="first_name">First Name</label> -->
+                    </div>
+                </div>
+                <div class="row">
+
+                        <div class="input-field col s1">
+                                <i class="material-icons">people</i>
+                        </div>
+                    <div class="input-field col s5">
+                        <input id="organization" type="text" class="validate" placeholder="Organization name" required>
+                        <!-- <label for="email">Email</label> -->
+                    </div>
+                </div>
+                <div class="row">
+                        <div class="input-field col s1">
+                                <i class="sizeI material-icons">email</i>
+                        </div>
+                    <div class="input-field col s5">
+                        <input id="email" type="text" class="validate" placeholder="Email" required>
+                        <!-- <label for="email">Email</label> -->
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        <button id="submit" class="btn btn-large  waves-effect waves-light" type="submit"
+                            name="action">Register
+                            <i class="sizeI material-icons right">done</i>
+                        </button>
+                    </div>
+                </div>
+
+
+        </div </form> </div> </div> <div class="container" id="confirm" style="display: none;">
+        <div class="row">
+            <div class="col s12">
+                <h4 class="Light center">Thanks for signing up!</h4>
+                <h5 class="Light center">Our platform is coming soon</h5>
+                <h6 class="Light center">but we'll contact you for more updates!</h6>
+                <a class="waves-effect waves-light btn">Share!</a>
+            </div>
         </div>
     </div>
-</div>
 
-<script defer src="./js/tracking2.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-<script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-firestore.js"></script>
-<script defer src="./js/firebase_email.js"></script>
+    <script defer src="./js/tracking2.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-firestore.js"></script>
+    <script defer src="./js/firebase_email.js"></script>
