--- a/public/index.html
+++ b/public/index.html
@@ -168,22 +168,25 @@
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container" style="height: calc(100vh - 56px);">
+  <div id="index-banner" class="parallax-container" style="height: calc(81vh - 56px);">
 
     <div class='particle-network-animation' style="position: fixed; top: 0; height: 100vh; width: 100vw; z-index: -1">
     </div>
     <div class="section no-pad-bot">
       <div class="container">
-        <img src="images/HomeTrans.png" style="width: 100%; position: relative; top: 10vh;">
-        <div class="row center" style="position: relative; top: 10vh;">
-          <a href="signin.html" id="download-button2" class="btn-large waves-effect waves-light lighten-1">Sign Up
-            Now</a>
-        </div>
+        <img src="images/HomeTrans.png" style="width: 100%; position: relative; top: 5vh;">
         <br><br>
       </div>
     </div>
   </div>
 
+  <div class="center" style="height: 18vh; position: relative; bottom: 5vh">
+    <h5 class="Light">
+      <p style="font-family: Aldrich; font-size: 18px; color: #008000">c</p>
+      <p style="font-family: Aldrich; font-size: 24px; color: #004c4c">ai</p>
+      <p style="font-family: Montserif; font-size: 12px; color: black">rrier is a HIPAA compliant semi-automated two way messaging system designed for healthcare professionals and powered by artificial intelligence
+    </h5>
+  </div>
 
 
   <div class="teal valign-wrapper" style="color: white;">
