--- a/public/signin.html
+++ b/public/signin.html
@@ -107,27 +107,27 @@
                 <div class="row">
 
                     <div class="input-field col s1">
-                            <i class="small material-icons">person</i>
+                        <i class="small material-icons">person</i>
                     </div>
                     <div class="input-field col s4">
-                      <input id="first_name" type="text" class="validate" placeholder="Full Name" required>
+                        <input id="full_name" type="text" class="validate" placeholder="Full Name" required>
                         <!-- <label for="first_name">First Name</label> -->
                     </div>
                 </div>
                 <div class="row">
 
-                        <div class="input-field col s1">
-                                <i class="material-icons">people</i>
-                        </div>
+                    <div class="input-field col s1">
+                        <i class="material-icons">people</i>
+                    </div>
                     <div class="input-field col s5">
                         <input id="organization" type="text" class="validate" placeholder="Organization name" required>
                         <!-- <label for="email">Email</label> -->
                     </div>
                 </div>
                 <div class="row">
-                        <div class="input-field col s1">
-                                <i class="sizeI material-icons">email</i>
-                        </div>
+                    <div class="input-field col s1">
+                        <i class="sizeI material-icons">email</i>
+                    </div>
                     <div class="input-field col s5">
                         <input id="email" type="text" class="validate" placeholder="Email" required>
                         <!-- <label for="email">Email</label> -->
@@ -136,7 +136,7 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-                        <button id="submit" class="btn btn-large  waves-effect waves-light" type="submit"
+                        <button id="submit" class="center btn btn-large  waves-effect waves-light" type="submit"
                             name="action">Register
                             <i class="sizeI material-icons right">done</i>
                         </button>
@@ -144,17 +144,25 @@
                 </div>
 
 
-        </div </form> </div> </div> <div class="container" id="confirm" style="display: none;">
-        <div class="row">
-            <div class="col s12">
+                </div>
+        </div>
+
+
+
+
+    </div </form> </div> </div>
+
+
+    <div id="ThankYouForm">
+            <div class="row">
                 <h4 class="Light center">Thanks for signing up!</h4>
                 <h5 class="Light center">Our platform is coming soon</h5>
                 <h6 class="Light center">but we'll contact you for more updates!</h6>
                 <a class="waves-effect waves-light btn">Share!</a>
             </div>
-        </div>
     </div>
 
+    
     <script defer src="./js/tracking2.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase-firestore.js"></script>
