--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="stylesheet" href="./style/animate.css">
+  <link rel="stylesheet" href="./style/font.css">
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/6.3.3/firebase-app.js"></script>
   <!-- include only the Firebase features as you need -->
@@ -180,11 +181,16 @@
     </div>
   </div>
 
-  <div class="center" style="height: 18vh; position: relative; bottom: 5vh">
-    <h5 class="Light">
-      <p style="font-family: Aldrich; font-size: 18px; color: #008000">c</p>
-      <p style="font-family: Aldrich; font-size: 24px; color: #004c4c">ai</p>
-      <p style="font-family: Montserif; font-size: 12px; color: black">rrier is a HIPAA compliant semi-automated two way messaging system designed for healthcare professionals and powered by artificial intelligence
+  <div style="height: 18vh; position: relative; bottom: 5vh; text-align: center">
+    <h5 class="">
+      <h5 style="font-family: Aldrich">c</h5>
+      <h5 style="font-family: Aldrich">ai</h5>
+      rrier is a HIPAA compliant semi-automated two way messaging system designed for 
+      healthcare 
+      professionals 
+      and powered by 
+      artificial 
+      intelligence
     </h5>
   </div>
 
